--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <div class="box">
       <div class="container">
-        <h1 id="title">Ronaldo</h1>
-        <button id="btn">Click Me</button>
+        <h1 id="title" data-index="0">Ronaldo</h1>
+        <button id="btn" data-index="0">Messi</button>
         <script src="script.js"></script>
       </div>
     </div>
